<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">公共艺术地图</string>
    <string name="msg_loading">正在加载中，请稍候</string>
    <string name="msg_failed">失败</string>
    <string name="msg_submiting">正在提交，请稍候</string>

    <!-- explore -->
    <string name="title_explore">公共艺术地图</string>
    <string name="msg_locating">正在定位中...</string>
    <string name="lab_dis2u">距离您现在的位置</string>
    <string name="lab_m">米</string>
    <string name="lab_km">公里</string>
    <string name="lab_10km">万公里</string>
    <string name="title_share">分享</string>
    <string name="share_tips_1">请阅读</string>
    <string name="share_tips_2">＃用户服务协议＃</string>
    <string name="share_tips_3">，遵守相关约定</string>
    <string name="text_agreen">同意</string>
    <string name="text_reject">不同意</string>
    <string name="pop_author">作者：</string>
    

    <!-- artworkinfo -->
    <string name="artwork_name">作品名称：</string>
    <string name="artwork_author">艺术家：</string>
    <string name="artwork_time">时间：</string>
    <string name="artwork_intro">作品介绍：</string>
    <string name="artwork_take_photo">手机拍照</string>
    <string name="artwork_pick_photo">手机相册</string>
    <string name="msg_have_no_sdcard">您手机里没有内存卡，无法上传照片</string>
    <string name="msg_take_photo_first">请先拍摄照片再进行分享！</string>
    <string name="msg_oom">内存不足，无法显示照片</string>
    <string name="msg_vote_success">投票成功！感谢您对该作品的支持！</string>
    <string name="msg_vote_failed">投票失败</string>
    <string name="msg_share_text">我发现了一个公共艺术作品，特别棒，分享给大家～</string>
    <string name="msg_upload_success">分享成功！</string>

    <!-- comment -->
    <string name="title_comment">作品评论</string>
    <string name="msg_loading_comment">正在加载中，请稍候...</string>
    <string name="msg_empty_comment">暂无评论！</string>
    <string name="msg_failed_comment">读取评论失败</string>
    <string name="msg_add_comment_success">评论发表成功！请耐心等待审核！</string>

    <!-- barcode -->
    <string name="title_barcode">扫一扫</string>
    <string name="msg_not_found">没有找到作品信息！</string>

    <!-- me -->
    <string name="title_me">关于我们</string>
    <string name="section_login">个人帐户</string>
    <string name="section_bind">分享设置</string>
    <string name="section_info">产品信息</string>
    <string name="menu_weibo_login">绑定新浪微博</string>
    <string name="menu_txweibo_login">绑定腾讯微博</string>
    <string name="menu_qq_login">绑定QQ账户</string>
    <string name="menu_login">点击登录</string>
    <string name="menu_feedback">用户反馈</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_about">关于</string>
    <string name="btn_logout">登出</string>
    <string name="btn_cancel_share">取消分享</string>
    <string name="msg_logout">正在登出...</string>

    <!-- login -->
    <string name="hint_username">用户名/邮箱地址/手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_password_re">密码确认</string>
    <string name="login_sinaweibo">新浪微博登录</string>
    <string name="login_qqweibo">腾讯微博登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="msg_logining">正在登录，请稍候...</string>
    <string name="msg_username_not_null">用户名不能为空.</string>
    <string name="msg_password_not_null">密码不能为空.</string>
    <string name="msg_password_not_same">密码不一致</string>

    <!-- about -->
    <string name="about_content">“公共艺术地图”（ePublicart Map）应用软件旨在建设公共艺术的数字地图，用户通过地图定位、搜索和欣赏世界各地的公共艺术作品和艺术设计空间，同时可以用手机分享自己喜欢的公共艺术作品。“点评”功能的开发让民众成为了自由艺评人，借此抒发自己的真实感受，也可以浏览他人的评论。</string>

    <!-- ssdk -->
    <string name="userid_found">正在登录…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>

    <!-- umeng -->
    <string name="update_checking">正在检查更新...</string>
    <string name="update_no">当前是最新版本，无须更新!</string>
    <string name="update_no_wifi">没有wifi连接， 只在wifi下更新</string>
    <string name="update_timeout">超时</string>
    <string name="agreement">重要须知：

    本协议是您（个人或单一实体）与本应用的开发者之间关于开发者向您提供本应用所涉相关服务的法律协议。在此特别提醒，用户（您）欲使用相关服务，必须事先认真阅读本服务条款中各条款，包括免除或者限制开发者责任的免责条款及对用户的权利限制。请您审阅并接受或不接受本服务条款（未成年人审阅时应得到法定监护人的陪同）。本服务条款一旦发生变更, 将在开发者网站主页上公布修改内容。修改后的服务条款一旦在网站主页上公布即有效代替原来的服务条款。 
    您若不同意对服务条款的修改，您应不使用或主动取消相关服务，否则，您的任何对相关服务的登陆、查看等使用行为将被视为您对相关修改和本协议的理解和接受。 
    如果您选择接受本协议开通服务，即表示您同意接受协议各项条件的约束。如果您不同意本服务条款，则不能获得使用本服务的权利。您若有违反本条款的任何规定，开发者有权随时中止或终止您服务的使用资格并保留追究相关法律责任的权利 
    如无特别说明，下列术语在本协议中的含义为： 
    开发者：指经有效申请并经过Apple Inc同意，将其开发的或有权的各种应用接入Apple store而向用户提供各种服务的，具备民事行为能力的个人、法人或其他组织。 应用：指由开发者开发的可向用户提供各种服务的应用程序，包括但不限于游戏类服务、工具类服务、电子商务类服务、视频或音乐类服务等现存的各种服务及今后可能出现的各种服务。 
    1. 本应用及服务由开发者开发，受中华人民共和国版权法及国际版权条约和其他知识产权法及条约的保护。 
    2.用户在遵守法律及本条款的前提下可依本协议使用应用及享受服务，但用户无权实施包括但不限于下列行为： 
    2.1 删除应用及其他副本上所有关于版权的信息、内容。 
    2.2 对应用进行反向工程、反向汇编、反向编译等。 
    2.3 对于应用中相关信息等，未经本应用开发者书面同意，用户不得擅自实施包括但不限于下列行为：使用、复制、修改、链接、转载、汇编、发表、出版，建立镜像站点、擅自借助“软件”发展与之有关的衍生产品、作品等。 
    2.4 利用应用及服务发表、传送、传播、储存危害国家安全、祖国统一、社会稳定的内容，或侮辱诽谤、色情、暴力、引起他人不安及任何违反国家法律法规政策的内容或者设置含有上述内容的网名、角色名。 
    2.5 利用应用及服务发表、传送、传播、储存侵害他人知识产权、商业机密权、肖像权、隐私等合法权利的内容。 
    2.6 进行任何危害网络安全的行为，包括但不限于：使用未经许可的数据或进入未经许可的服务器/帐户；未经允许进入公众网络或者他人终端系统并删除、修改、增加存储信息；未经许可，企图探查、扫描、测试本“软件”系统或网络的弱点或其它实施破坏网络安全的行为； 企图干涉、破坏本“软件”系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；伪造数据包名称或部分名称。 
    2.7 进行任何破坏应用服务公平性或者其他影响应用正常秩序的行为，如主动或被动刷分、合伙作弊、使用外挂或者其他的作弊软件、利用BUG（又叫“漏洞”或者“缺陷”）来获得不正当的非法利益，或者利用互联网或其他方式将外挂、作弊软件、BUG公之于众。 
    2.8 进行任何诸如发布广告、销售商品的商业行为，或者进行任何非法的侵害开发者利益的行为，如贩卖游戏内虚拟物品、等级和游戏货币等。 
    2.9 冒充开发者、应用服务管理员或应用论坛管理员、版主发布任何诈骗或虚假信息。 
    3. 用户须明白，使用本服务产品涉及到互联网服务，可能会受到各个环节不稳定因素的影响。因此服务存在不可抗力、病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。 
    4. 用户须明白，在使用本服务产品存在有来自任何他人的包括威胁性的、诽谤性的、令人反感的或非法的内容或行为或对他人权利的侵犯（包括知识产权）的匿名或冒名的信息的风险，用户须承担以上风险，开发者对服务不作任何类型的担保，不论是明确的或隐含的，包括所有有关信息真实性、适商性、适于某一特定用途、所有权和非侵权性的默示担保和条件，对因此导致任何因用户不正当或非法使用服务产生的直接、间接、偶然、特殊及后续的损害，不承担任何责任。 
    5．使用本服务必须遵守国家有关法律和政策等，维护国家利益，保护国家安全，并遵守本条款，对于用户违法或违反本协议的使用(包括但不限于言论发表、传送等)而引起的一切责任，由用户负全部责任。 
    6．尊重用户个人隐私信息的私有性是本应用及服务的原则，开发者将会采取合理的措施保护用户的个人隐私信息，除法律或有法律赋予权限的政府部门要求或用户同意等原因外，未经用户同意不向第三方公开、透露用户个人隐私信息。 
    7. 特别提醒用户，使用互联网必须遵守国家有关的政策和法律，如刑法、国家安全法、保密法、计算机信息系统安全保护条例等，保护国家利益，保护国家安全，对于违法使用互联网络而引起的一切责任，由用户负全部责任。 
    7.1. 用户不得使用本应用及服务发送或传播任何妨碍社会治安或非法、虚假、骚扰性、侮辱性、恐吓性、伤害性、破坏性、挑衅性、淫秽色情性等内容的信息。 
    7.2. 用户不得使用本应用及服务发送或传播敏感信息和违反国家法律制度的信息。 
    7.3. 本应用及服务同大多数因特网产品一样，易受到各种安全问题的困扰，包括但不限于： 
    （1）透露详细个人资料，被不法分子利用，造成现实生活中的骚扰。 
    （2）哄骗、破译密码。 
    （3）下载安装的其它软件中含有“特洛伊木马”等病毒，威胁到个人终端上信息和数据的安全，继而威胁对本应用及服务的使用。 
    8. 请用户注意勿在使用本应用及服务中透露自己的各类财产帐户、银行卡、信用卡、QQ 号码及对应密码等重要资料，否则由此带来的任何损失由用户自行承担。 
    9. 除本应用官方公布的支付渠道之外任何充值渠道均为非法充值，用户不得利用非法渠道充值，造成的损失由用户自行承担。 
    10. 用户应规范、合法地使用本应用及服务，如用户有捣乱、骚扰、欺骗其他用户等行为或者实施其他违反本协议的行为，一经发现，开发者有权停止服务。 
    11.用户须明白，开发者为了本应用整体运营的需要，在经Apple Inc公司许可后，开发者拥有随时修改或中断、中止或终止服务而不需通知您的权利，开发者行使前述权利不需对您或任何第三方负责或承担任何赔偿责任。 
    12. 开发者和用户同意、理解并遵循以下条款，该部分条款不仅适用于应用程序，若开发者的其他相关服务涉及类似、相关情形的，也同时适用，均有约束力： 
    12.1您在使用应用的收费功能时，应当按照开发者的要求支付相应的费用。而且，该等权利属于开发者的经营自主权，开发者保留随时更改经营模式的权利，即保留变更收费的费率标准、收费的软件功能、收费对象及收费时间等权利。同时，开发者也保留对该应用程序进行升级、改版、增加、删除、修改、变更其功能或者变更游戏规则的权利。您如果不接受该等变更的，应当立即立即停止使用应用程序；您继续使用应用程序的行为，视为您接受改变后的经营模式。 
    12.2基于本协议您可以： 
    （1）接收、下载、安装、启动、升级、登录、显示、运行和/或截屏应用程序。 
    （2）创建应用程序角色，设置网名，查阅游戏规则、用户个人资料、对局结果，设置参数，使用聊天功能，在游戏中购买、赠送道具、游戏装备等。 
    （3）使用应用上列功能之外的其他的某一项或某几项功能，具体参照应用规则约定。 
    12.3未经开发者允许，您不得为下列任何一种行为；您如果要进行下列任何一种行为，请您与开发者联系，取得开发者的同意，并应开发者要求与之签订电子的或者纸版的书面合同： 
    （1）对应用程序进行扫描、探查、测试，以检测、发现、查找其中可能存在的BUG或弱点。 
    （2）修改、复制、发行、出租、出版、翻译、汇编、改编和/或转载应用程序或其各种衍生作品，或者利用互联网或其他的方式将其公之于众。 
    （3）建立有关该应用或其各种衍生作品的镜像站点，或者进行网页（络）快照，或者利用网络游戏架设服务器，为他人提供与之完全相同或者类似的互联网服务。 
    （4）在应用程序当中内置各种插件程序或者其他的第三方程序。 
    （5）生产、制作、批发、销售、出版和/或发行该应用程序改编衍生品。 
    （6）为应用程序提供测试、BUG及外挂跟踪汇报、软文撰写及推广、竞争情报收集等服务。 
    7）使用应用程序的名称、商标等。 
    （8）参加开发者和/或其合作单位举办的有关应用程序的电子竞技比赛活动。 
    （9）实施上列行为之外的需要开发者同意的其他的有关应用程序的行为。 
    12.4您可以从开发者提供的各种途径中获得与应用程序相关的虚拟货币、游戏道具、游戏装备等。开发者不提倡您通过非开发者指定渠道购买、接受赠与或者其他的方式从第三方获得上述游戏物品，尤其是第三方开设的电子网络交易平台网站。因为从第三方获得的上述游戏物品可能是盗号分子盗窃得来的赃物，受害者可能会通过各种手段要求索回。 
    12.5开发者可能会通过应用官方网站、客服电话、游戏管理员、或者其他的途径，向您提供诸如游戏规则说明、BUG或外挂投诉、游戏物品找回、游戏物品锁定或解除锁定、帐号申诉等客户服务，您应当： 
    （1）通过开发者客服官方网站或者开发者提供的其他途径了解这些客户服务的内容、要求以及资费，谨慎选择是否需要享受相应的客户服务，向开发者真实地准确地表达您的需求。 
    （2）同意并接受开发者关于该等客户服务的专门协议或条款。 
    （3）按照开发者的要求如实提供您的包括有效身份信息在内的个人信息和游戏情况，及您掌握的其他用户或网络游戏本身的情况，例如：您的帐户及其项下的个人资料、网络游戏的登录情况和游戏物品情况，应用程序当中存在的BUG、外挂及您知晓的其他玩家使用BUG或外挂的情况。 
    12.6应用程序官方网站将通过文字、图片或者其他形式，向您介绍该应用的规则。应用程序亦是按照这种规则设计、开发的。您是完全同意并承诺按照这种规则进行相应的应用；您如果不同意，请您不要下载、安装、启动、登录、显示、运行应用，您下载、安装、启动、登录、显示和/或运行的行为，即视为您同意并接受这些应用规则。 
    12.7如果在使用和享受应用产品及服务的过程中，您发现该应用完全或者部分不能实现开发者所介绍的对应的规则的，请您立即停止使用不符合规则的这一部分游戏内容或者区域，并在第一时间内通知开发者，开发者将会尽快进行修复，使之符合这些应用规则。 
    12.8您充分理解到：可能会不定期地通过发布软件升级包或软件补丁、在线升级等方式对应用进行更新。更新的过程中，开发者可能通过调取、收集您的个人关于应用的客户端软件版本信息、数据及其他有关资料，并自动进行替换、修改、删除和/或补充。此种行为是软件更新的所必须的一种操作或步骤，您如果不同意开发者进行此种操作，请您不要进行更新；您使用的行为即视为您同意开发者进行此种操作。 
    12.9您充分理解到：对于应用来说，某些更新可能是软件版本的更新，如果您不进行此种更新则将无法登录该应用。而且，此种更新将会导致您使用的终端上原有的软件版本完全被新的软件版本替换掉。 
    12.10用户如有任何违反协议或相关法规的，开发者有权采取下列措施当中的一种或几种： 
    （1）立即断开您当前使用的终端与应用服务器之间的网络连接，您必须重新登录才能继续使用该应用。 
    （2）暂时禁止您凭借当前使用的帐号登录网络游戏。 
    （3）暂时禁止您使用应用当中某一要求付费的功能，直至您清偿所欠费用并为继续使用上述付费功能而预先支付相应的费用之日止。 
    （4）降低或者清除您当前使用的帐号在应用当中的积分、等级和/或荣誉。 
    （5）暂时禁止您凭借当前使用的帐号在网络游戏当中发表任何言论。 
    （6）永久性地、不可撤销地将您发布的广告、虚假信息或者非法言论删除，或者采取其他的阻止其传播的措施。 
    （7）永久性地、不可撤销地将您非法获取的虚拟货币、游戏道具和/或游戏装备等游戏物品删除，或者将其返还给原来的通过合法途径取得其使用权的其他用户。 
    （8）永久性地、不可撤销地将您非法获取的积分、等级和/或荣誉取消或清零。 
    （9）永久性地、不可撤销地禁止您凭借当前使用的帐号在应用当中发表任何言论。 
    （10）永久性地、不可撤销地删除您当前使用的帐号项下的所有游戏道具、游戏装备、游戏币、积分、等级、荣誉等资料以及相应的游戏数据。 
    （11）永久性地、不可撤销地禁止您凭借在当前使用的帐号登录应用，并删除、清空该帐号在应用当中产生的所有数据、游戏币、道具、装备等资料。 
    （12）采取上列措施之外的其他的措施。 
    12.11开发者可能会连续地、间断地或者交替地采取前述措施当中的一种或几种。 
    12.12您充分理解到：从第三方获得游戏币、游戏道具、游戏装备等物品可能存在各种风险。您不得从第三方获得上述游戏物品，您如果坚持从第三方获得上述游戏物品，则您应当自行承担相应的风险，开发者不保证该等游戏物品在网络游戏中能够正常使用，也不保证该等物品不被索回。 
    12.13您充分理解到：开发者因用户从事违反约定或法规行为而采取得措施，可能会导致您当前使用的帐号项下的有使用期限的道具、装备因使用期限在开发者采取上述措施期间届满而无法继续使用，由此给您造成损失由您自行承担。即开发者采取上述措施所持续的时间是计算在有使用期限的游戏道具、游戏装备的使用期限当中的；该等措施执行终止后，游戏道具、游戏装备的使用期限并不会因此续延。 
    13.用户账号使用与保管 
    （1）开发者有权审查用户注册所提供的身份信息是否真实、有效，并应积极地采取技术与管理等合理措施保障用户账号的安全、有效；用户有义务妥善保管其账号及密码，并正确、安全地使用其账号及密码。任何一方未尽上述义务导致账号密码遗失、账号被盗等情形而给用户和他人的民事权利造成损害的，应当承担由此产生的法律责任。 
    （2）用户对登录后所持账号产生的行为依法享有权利和承担责任。 
    （3）用户发现其账号或密码被他人非法使用或有使用异常的情况的，应及时通知开发者，并有权通知开发者采取措施暂停该账号的登录和使用。 
    （4）开发者根据用户的通知采取措施暂停用户账号的登录和使用的，开发者应当要求用户提供并核实与其注册身份信息相一致的个人有效身份信息。 
    （5）开发者核实用户所提供的个人有效身份信息与所注册的身份信息相一致的，应当及时采取措施暂停用户账号的登录和使用。 
    （6）开发者违反第（5）项的约定，未及时采取措施暂停用户账号的登录和使用，因此而给用户造成损失的，应当承担其相应的法律责任。 
    （7）用户没有提供其个人有效身份证件或者用户提供的个人有效身份证件与所注册的身份信息不一致的，开发者有权拒绝用户上述请求。 
    （8）用户为了维护其合法权益，向开发者提供与所注册的身份信息相一致的个人有效身份信息时，开发者应当为用户提供账号注册人证明、原始注册信息等必要的协助和支持，并根据需要向有关行政机关和司法机关提供相关证据信息资料。 
    14.服务的中止与终止 
    （1）用户有发布违法信息、严重违背社会公德、以及其他违反法律禁止性规定的行为，开发者有权立即终止对用户提供服务。 
    （2）用户在接受应用服务时实施违反约定或相关法规的不正当行为的，开发者有权终止对用户提供服务。 
    （3）开发者根据本条约定中止或终止对用户提供部分或全部服务的，开发者应负举证责任。 
    15.用户信息保护 
    （1）开发者要求用户提供与其个人身份有关的信息资料时，会事先以明确而易见的方式向用户公开其隐私权保护政策和个人信息利用政策，并采取必要措施保护用户的个人信息资料的安全。 
    （2）未经用户许可开发者不得向任何第三方提供、公开或共享用户注册资料中的姓名、个人有效身份证件号码、联系方式、家庭住址等个人身份信息，但下列情况除外： 
    A. 用户或用户监护人授权开发者披露的； 
    B. 有关法律要求开发者披露的； 
    C. 司法机关或行政机关基于法定程序要求开发者提供的； 
    D.开发者为了维护自己合法权益而向用户提起诉讼或者仲裁时； 
    E.应用户监护人的合法要求而提供用户个人身份信息时。 
    16.本服务条款的解释，效力及纠纷的解决，适用于中华人民共和国大陆法律。若发生任何纠纷或争议，应当友好协商解决，协商不成的，均应提交北京市海淀区人民法院解决。</string>

</resources>